--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -13,6 +13,7 @@
     \usepackage{fontspec}
   \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
+  \newcommand{\euro}{€}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -23,6 +24,7 @@
 }{}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
+\PassOptionsToPackage{usenames,dvipsnames}{color} % color is loaded by hyperref
 \hypersetup{unicode=true,
             pdftitle={Machine Learning},
             pdfauthor={Mohamad Ghassany},
@@ -81,25 +83,12 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
-\IfFileExists{parskip.sty}{%
-\usepackage{parskip}
-}{% else
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
-}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
-% Redefines (sub)paragraphs to behave more like sections
-\ifx\paragraph\undefined\else
-\let\oldparagraph\paragraph
-\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-\let\oldsubparagraph\subparagraph
-\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
 
 %%% Use protect on footnotes to avoid problems with footnotes in titles
 \let\rmarkdownfootnote\footnote%
@@ -124,7 +113,18 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-01-07}
+  \date{2017-01-09}
+
+
+% Redefines (sub)paragraphs to behave more like sections
+\ifx\paragraph\undefined\else
+\let\oldparagraph\paragraph
+\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+\let\oldsubparagraph\subparagraph
+\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
 
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -853,7 +853,7 @@ Click here to see the ANOVA decomposition and its dependence on
 The ANOVA table summarizes the decomposition of the variance. Here is
 given in the layout employed by \texttt{R}.
 
-\begin{longtable}[]{@{}llllll@{}}
+\begin{longtable}[c]{@{}llllll@{}}
 \toprule
 & Degrees of freedom & Sum Squares & Mean Squares & \(F\)-value &
 \(p\)-value\tabularnewline
@@ -1065,7 +1065,7 @@ Do the following:
   Compute \(x_2+y_4\) and \(\cos(x_3) + \sin(x_2) e^{-y_2}\). (Answers:
   \texttt{104}, \texttt{-0.9899925})
 \item
-  Set \(x_{2}=0\) and \(y_{2}=-1\). Recompute the previous expressions.
+  Set \(x_{3}=0\) and \(y_{2}=-1\). Recompute the previous expressions.
   (Answers: \texttt{97}, \texttt{2.785875})
 \item
   Index \(y\) by \(x+1\) and store it as \texttt{z}. What is the output?
@@ -1539,80 +1539,94 @@ The following table contains a handy cheat sheet of equivalences between
 \texttt{R} code and some of the statistical concepts associated to
 linear regression.
 
-\begin{longtable}[]{@{}ll@{}}
+\begin{longtable}[c]{@{}ll@{}}
 \toprule
 \begin{minipage}[b]{0.49\columnwidth}\raggedright\strut
-\texttt{R}\strut
-\end{minipage} & \begin{minipage}[b]{0.45\columnwidth}\raggedright\strut
-Statistical concept\strut
-\end{minipage}\tabularnewline
+\texttt{R}
+\strut\end{minipage} &
+\begin{minipage}[b]{0.45\columnwidth}\raggedright\strut
+Statistical concept
+\strut\end{minipage}\tabularnewline
 \midrule
 \endhead
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{x}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Predictor \(X_1,\ldots,X_n\)\strut
-\end{minipage}\tabularnewline
+\texttt{x}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Predictor \(X_1,\ldots,X_n\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{y}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Response \(Y_1,\ldots,Y_n\)\strut
-\end{minipage}\tabularnewline
+\texttt{y}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Response \(Y_1,\ldots,Y_n\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{data\ \textless{}-\ data.frame(x\ =\ x,\ y\ =\ y)}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Sample \((X_1,Y_1),\ldots,(X_n,Y_n)\)\strut
-\end{minipage}\tabularnewline
+\texttt{data\ \textless{}-\ data.frame(x\ =\ x,\ y\ =\ y)}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Sample \((X_1,Y_1),\ldots,(X_n,Y_n)\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\ \textless{}-\ lm(y\ \textasciitilde{}\ x,\ data\ =\ data)}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted linear model\strut
-\end{minipage}\tabularnewline
+\texttt{model\ \textless{}-\ lm(y\ \textasciitilde{}\ x,\ data\ =\ data)}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted linear model
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$coefficients}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted coefficients \(\hat\beta_0,\hat\beta_1\)\strut
-\end{minipage}\tabularnewline
+\texttt{model\$coefficients}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted coefficients \(\hat\beta_0,\hat\beta_1\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$residuals}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted residuals \(\hat\varepsilon_1,\ldots,\hat\varepsilon_n\)\strut
-\end{minipage}\tabularnewline
+\texttt{model\$residuals}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted residuals \(\hat\varepsilon_1,\ldots,\hat\varepsilon_n\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$fitted.values}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted values \(\hat Y_1,\ldots,\hat Y_n\)\strut
-\end{minipage}\tabularnewline
+\texttt{model\$fitted.values}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted values \(\hat Y_1,\ldots,\hat Y_n\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$df.residual}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Degrees of freedom \(n-2\)\strut
-\end{minipage}\tabularnewline
+\texttt{model\$df.residual}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Degrees of freedom \(n-2\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\ \textless{}-\ summary(model)}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Summary of the fitted linear model\strut
-\end{minipage}\tabularnewline
+\texttt{summaryModel\ \textless{}-\ summary(model)}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Summary of the fitted linear model
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$sigma}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted residual standard deviation \(\hat\sigma\)\strut
-\end{minipage}\tabularnewline
+\texttt{summaryModel\$sigma}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted residual standard deviation \(\hat\sigma\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$r.squared}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Coefficient of determination \(R^2\)\strut
-\end{minipage}\tabularnewline
+\texttt{summaryModel\$r.squared}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Coefficient of determination \(R^2\)
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$fstatistic}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-\(F\)-test\strut
-\end{minipage}\tabularnewline
+\texttt{summaryModel\$fstatistic}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+\(F\)-test
+\strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{anova(model)}\strut
-\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-ANOVA table\strut
-\end{minipage}\tabularnewline
+\texttt{anova(model)}
+\strut\end{minipage} &
+\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+ANOVA table
+\strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -1903,6 +1917,5 @@ assess the model we created, then we will be using the test data!
 \end{Shaded}
 
 ◼
-
 
 \end{document}
