--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -13,7 +13,6 @@
     \usepackage{fontspec}
   \fi
   \defaultfontfeatures{Ligatures=TeX,Scale=MatchLowercase}
-  \newcommand{\euro}{€}
 \fi
 % use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -24,7 +23,6 @@
 }{}
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
-\PassOptionsToPackage{usenames,dvipsnames}{color} % color is loaded by hyperref
 \hypersetup{unicode=true,
             pdftitle={Machine Learning},
             pdfauthor={Mohamad Ghassany},
@@ -83,12 +81,25 @@
 % margins by default, and it is still possible to overwrite the defaults
 % using explicit options in \includegraphics[width, height, ...]{}
 \setkeys{Gin}{width=\maxwidth,height=\maxheight,keepaspectratio}
+\IfFileExists{parskip.sty}{%
+\usepackage{parskip}
+}{% else
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
+}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
+% Redefines (sub)paragraphs to behave more like sections
+\ifx\paragraph\undefined\else
+\let\oldparagraph\paragraph
+\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
+\fi
+\ifx\subparagraph\undefined\else
+\let\oldsubparagraph\subparagraph
+\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
+\fi
 
 %%% Use protect on footnotes to avoid problems with footnotes in titles
 \let\rmarkdownfootnote\footnote%
@@ -113,18 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-01-09}
-
-
-% Redefines (sub)paragraphs to behave more like sections
-\ifx\paragraph\undefined\else
-\let\oldparagraph\paragraph
-\renewcommand{\paragraph}[1]{\oldparagraph{#1}\mbox{}}
-\fi
-\ifx\subparagraph\undefined\else
-\let\oldsubparagraph\subparagraph
-\renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
-\fi
+  \date{2017-01-15}
 
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -853,7 +853,7 @@ Click here to see the ANOVA decomposition and its dependence on
 The ANOVA table summarizes the decomposition of the variance. Here is
 given in the layout employed by \texttt{R}.
 
-\begin{longtable}[c]{@{}llllll@{}}
+\begin{longtable}[]{@{}llllll@{}}
 \toprule
 & Degrees of freedom & Sum Squares & Mean Squares & \(F\)-value &
 \(p\)-value\tabularnewline
@@ -1539,94 +1539,80 @@ The following table contains a handy cheat sheet of equivalences between
 \texttt{R} code and some of the statistical concepts associated to
 linear regression.
 
-\begin{longtable}[c]{@{}ll@{}}
+\begin{longtable}[]{@{}ll@{}}
 \toprule
 \begin{minipage}[b]{0.49\columnwidth}\raggedright\strut
-\texttt{R}
-\strut\end{minipage} &
-\begin{minipage}[b]{0.45\columnwidth}\raggedright\strut
-Statistical concept
-\strut\end{minipage}\tabularnewline
+\texttt{R}\strut
+\end{minipage} & \begin{minipage}[b]{0.45\columnwidth}\raggedright\strut
+Statistical concept\strut
+\end{minipage}\tabularnewline
 \midrule
 \endhead
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{x}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Predictor \(X_1,\ldots,X_n\)
-\strut\end{minipage}\tabularnewline
+\texttt{x}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Predictor \(X_1,\ldots,X_n\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{y}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Response \(Y_1,\ldots,Y_n\)
-\strut\end{minipage}\tabularnewline
+\texttt{y}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Response \(Y_1,\ldots,Y_n\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{data\ \textless{}-\ data.frame(x\ =\ x,\ y\ =\ y)}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Sample \((X_1,Y_1),\ldots,(X_n,Y_n)\)
-\strut\end{minipage}\tabularnewline
+\texttt{data\ \textless{}-\ data.frame(x\ =\ x,\ y\ =\ y)}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Sample \((X_1,Y_1),\ldots,(X_n,Y_n)\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\ \textless{}-\ lm(y\ \textasciitilde{}\ x,\ data\ =\ data)}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted linear model
-\strut\end{minipage}\tabularnewline
+\texttt{model\ \textless{}-\ lm(y\ \textasciitilde{}\ x,\ data\ =\ data)}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted linear model\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$coefficients}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted coefficients \(\hat\beta_0,\hat\beta_1\)
-\strut\end{minipage}\tabularnewline
+\texttt{model\$coefficients}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted coefficients \(\hat\beta_0,\hat\beta_1\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$residuals}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted residuals \(\hat\varepsilon_1,\ldots,\hat\varepsilon_n\)
-\strut\end{minipage}\tabularnewline
+\texttt{model\$residuals}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted residuals \(\hat\varepsilon_1,\ldots,\hat\varepsilon_n\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$fitted.values}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted values \(\hat Y_1,\ldots,\hat Y_n\)
-\strut\end{minipage}\tabularnewline
+\texttt{model\$fitted.values}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted values \(\hat Y_1,\ldots,\hat Y_n\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{model\$df.residual}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Degrees of freedom \(n-2\)
-\strut\end{minipage}\tabularnewline
+\texttt{model\$df.residual}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Degrees of freedom \(n-2\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\ \textless{}-\ summary(model)}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Summary of the fitted linear model
-\strut\end{minipage}\tabularnewline
+\texttt{summaryModel\ \textless{}-\ summary(model)}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Summary of the fitted linear model\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$sigma}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Fitted residual standard deviation \(\hat\sigma\)
-\strut\end{minipage}\tabularnewline
+\texttt{summaryModel\$sigma}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Fitted residual standard deviation \(\hat\sigma\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$r.squared}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-Coefficient of determination \(R^2\)
-\strut\end{minipage}\tabularnewline
+\texttt{summaryModel\$r.squared}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+Coefficient of determination \(R^2\)\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{summaryModel\$fstatistic}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-\(F\)-test
-\strut\end{minipage}\tabularnewline
+\texttt{summaryModel\$fstatistic}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+\(F\)-test\strut
+\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.49\columnwidth}\raggedright\strut
-\texttt{anova(model)}
-\strut\end{minipage} &
-\begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
-ANOVA table
-\strut\end{minipage}\tabularnewline
+\texttt{anova(model)}\strut
+\end{minipage} & \begin{minipage}[t]{0.45\columnwidth}\raggedright\strut
+ANOVA table\strut
+\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -2105,7 +2091,7 @@ So the question we ask here: \emph{Is the whole regression explaining
 anything at all?} The answer comes from the \(F\)-test in the ANOVA
 (ANalysis Of VAriance) table. This is what we get in an ANOVA table:
 
-\begin{longtable}[c]{@{}llllll@{}}
+\begin{longtable}[]{@{}llllll@{}}
 \toprule
 Source & df & SS & MS & \(F\) & p-value\tabularnewline
 \midrule
@@ -2129,7 +2115,7 @@ is related to the response, after adjusting for the other predictors.
 Let's look at the following table we obtain in general using a
 statistical software for example
 
-\begin{longtable}[c]{@{}lllll@{}}
+\begin{longtable}[]{@{}lllll@{}}
 \toprule
 & Coefficient & Std. error & \(t\)-statistic & p-value\tabularnewline
 \midrule
@@ -2280,5 +2266,199 @@ Model}\label{other-considerations-in-regression-model}
 \end{itemize}
 
 ◼
+
+\chapter*{PW 2}\label{pw-2}
+\addcontentsline{toc}{chapter}{PW 2}
+
+\section{Reporting}\label{reporting}
+
+\subsection*{Markdown}\label{markdown}
+\addcontentsline{toc}{subsection}{Markdown}
+
+Markdown is a lightweight markup language with plain text formatting
+syntax designed so that it can be converted to HTML and many other
+formats (pdf, docx, etc..).
+
+Click \href{http://agea.github.io/tutorial.md/}{here} to see an example
+of a markdown (\texttt{.md}) syntaxes and the result in HTML. The
+markdown syntaxes are on right and their HTML result is on left. You can
+modify the source text to see the result.
+
+\begin{rmdtip}
+\textbf{Extra}: There is some markdown online editors you can use, like
+\href{http://dillinger.io/}{dillinger.io/}. See the Markdown source file
+and the HTML preview. Play with the source text to see the result in the
+preview.
+\end{rmdtip}
+
+\subsection*{R Markdown}\label{r-markdown}
+\addcontentsline{toc}{subsection}{R Markdown}
+
+R Markdown is a variant of Markdown that has embedded \texttt{R} code
+chunks, to be used with the \texttt{knitr} package to make it
+\textbf{easy to create reproducible web-based reports}.
+
+First, in \texttt{Rstudio} create a new \texttt{R\ Notebook} file. A
+default template will be opened. Click on \texttt{Preview} and save your
+file. Then your html report will be opened in the viewer pane. Every
+time you click on \texttt{Preview} the html file in the viewer pane will
+be updated. If your file is named \texttt{report.Rmd}, your report is
+named \texttt{report.nb.html}.
+
+\begin{rmdcaution}
+\begin{itemize}
+\item
+  Be ready to submit your report (your \texttt{.nb.html} file) at the
+  end of each class.
+\item
+  You report must be named:
+\end{itemize}
+
+\texttt{YouLastName\_YourFirstName\_WeekNumber.nb.html}
+\end{rmdcaution}
+
+You can find all the informations about R Markdown on this site:
+\href{http://rmarkdown.rstudio.com/lesson-1.html}{rmarkdown.rstudio.com}.
+
+You may also find the following resources helpful:
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2015/03/rmarkdown-reference.pdf}{The
+  R Markdown Reference Guide}
+\item
+  \href{https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf}{The
+  R Markdown Cheatsheet}
+\end{itemize}
+
+\subsection*{The report to be
+submitted}\label{the-report-to-be-submitted}
+\addcontentsline{toc}{subsection}{The report to be submitted}
+
+In \texttt{Rstudio}, start by creating a R Notebook. When you create it
+a default template will be opened with the following first lines:
+
+\begin{verbatim}
+---
+title: "R Notebook"
+output: html_notebook
+---
+\end{verbatim}
+
+These lines are the YAML header in which you choose the settings of your
+report (title, author, date, appearance, etc..)
+
+For your submitted report, use the following YAML header:
+
+\begin{verbatim}
+---
+title: "Week 2"
+subtitle: "Multiple Linear Regression"
+author: LastName FirstName
+date: "2017-01-15 19:43:19"
+output:
+  html_notebook:
+    toc: true
+    toc_depth: 2
+    theme: flatly
+---
+\end{verbatim}
+
+In the core of your report:
+
+\begin{itemize}
+\tightlist
+\item
+  Put every exercise in a section, name the section \texttt{Exercise\ i}
+  (i is the exercise's number).
+\item
+  Paste the exercise content.
+\item
+  Write the code of the exercise in R chunks.
+\item
+  Run the chunk, you get the result down the chunk, don't close it.
+\item
+  Click on Preview.
+\item
+  If there is a need, explain the results.
+\end{itemize}
+
+\section{Multiple Linear Regression}\label{multiple-linear-regression-1}
+
+\begin{rmdexercise}
+Submit a report following the instructions above. In the first exercise
+you must continue the analysis of the Boston data set.
+\end{rmdexercise}
+
+\subsection*{Exercise 1: Boston data
+set}\label{exercise-1-boston-data-set}
+\addcontentsline{toc}{subsection}{Exercise 1: Boston data set}
+
+Continue what we started last week with the Boston dataset which is part
+of the \texttt{MASS} package. Recall that this dataset records the
+median value of houses for 506 neighborhoods around Boston.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Load the Boston dataset from \texttt{MASS} package.
+\item
+  Split the dataset into traning set and testing set.
+\item
+  Check if there is a linear relationship between the variables
+  \texttt{mdev} and \texttt{age}. (use \texttt{cor()} function).
+\item
+  Plot \texttt{medv} in function of \texttt{age}.
+\item
+  Train a regression model using both \texttt{lstat} and \texttt{age} as
+  predictors of median house value. (Remember that we transformed
+  \texttt{lstat}, use the same transformation here). What is the
+  obtained model?
+\item
+  Print the summary of the obtained regression model.
+\item
+  Are the predictors significant?
+\item
+  Is the model as a whole significant ?
+\item
+  Train a new model using all the variables of the dataset. (We can use
+  \texttt{.} as a short cut instead of writing down all the variables
+  names)
+\item
+  When using all the variables as predictors, we didn't transform
+  \texttt{lstat}. Re train the model using \texttt{log(lstat)} instead
+  of \texttt{lstat}.
+\item
+  Did \(R^2\) improve ?
+\item
+  To see if there is correlated variables print the correlation matrix
+  using the \texttt{cor()} function (round the correlations with 2
+  digits).
+\item
+  Visualize the correlations using the \texttt{corrplot} package. To do
+  so, install the \texttt{corrplot} package, load it, then use the
+  function \texttt{corrplot.mixed()}. See this
+  \href{https://cran.r-project.org/web/packages/corrplot/vignettes/corrplot-intro.html}{link}
+  for examples and to understand how to use it.
+\item
+  What is the correlation between \texttt{tax} and \texttt{rad}?
+\item
+  Run the model again without \texttt{rad}. What happens to the \(R^2\)
+  ? and for the F-statistic?
+\end{enumerate}
+
+\begin{rmdinsight}
+Of course \(R^2\) should go a little lower because we deleted one of the
+variables. But check for the model significance (F-statistic) gets
+higher, which means the p-values gets lower and thus the model is more
+significant without \texttt{rad}.
+
+\textbf{Extra}: Re run the model but delete \texttt{tax} instead of
+\texttt{rad}.
+\end{rmdinsight}
+
+◼
+
 
 \end{document}
