--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,7 +124,7 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-01-15}
+  \date{2017-01-16}
 
 \usepackage{booktabs}
 \usepackage{longtable}
@@ -2299,11 +2299,32 @@ chunks, to be used with the \texttt{knitr} package to make it
 \textbf{easy to create reproducible web-based reports}.
 
 First, in \texttt{Rstudio} create a new \texttt{R\ Notebook} file. A
-default template will be opened. Click on \texttt{Preview} and save your
-file. Then your html report will be opened in the viewer pane. Every
-time you click on \texttt{Preview} the html file in the viewer pane will
-be updated. If your file is named \texttt{report.Rmd}, your report is
-named \texttt{report.nb.html}.
+default template will be opened. There is some \texttt{R} code in
+\texttt{R\ chunks}, run them then click on \texttt{Preview} and save
+your file. Then your html report will be opened in the viewer pane.
+Every time you click on \texttt{Preview} the html file in the viewer
+pane will be updated. If your file is named \texttt{report.Rmd}, your
+report is named \texttt{report.nb.html}.
+
+\begin{rmdcaution}
+\begin{itemize}
+\tightlist
+\item
+  If there is no \texttt{R\ Notebook} button, this means you don't have
+  the last version of \texttt{Rstudio}.
+\item
+  In this case, click on \texttt{R\ Markdown} buttonn make sure that you
+  select HTML as output. This produces a \texttt{html\_document} and you
+  need to click on \texttt{knit} button to compile it.
+\item
+  If you have problems creating a \texttt{R\ Markdown}~file (problem in
+  installing packages, etc..) close your \texttt{Rstudio} and reopen it
+  with administrative tools and retry.
+\item
+  If it doesn't work and in order to not loose more time, write your
+  script in an \texttt{.R}~file with your comments and submit it.
+\end{itemize}
+\end{rmdcaution}
 
 \begin{rmdcaution}
 \begin{itemize}
@@ -2356,7 +2377,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-15 19:43:19"
+date: "2017-01-16 09:51:20"
 output:
   html_notebook:
     toc: true
@@ -2391,9 +2412,8 @@ Submit a report following the instructions above. In the first exercise
 you must continue the analysis of the Boston data set.
 \end{rmdexercise}
 
-\subsection*{Exercise 1: Boston data
-set}\label{exercise-1-boston-data-set}
-\addcontentsline{toc}{subsection}{Exercise 1: Boston data set}
+\subsection*{The exercises}\label{the-exercises}
+\addcontentsline{toc}{subsection}{The exercises}
 
 Continue what we started last week with the Boston dataset which is part
 of the \texttt{MASS} package. Recall that this dataset records the
