--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -2298,30 +2298,24 @@ R Markdown is a variant of Markdown that has embedded \texttt{R} code
 chunks, to be used with the \texttt{knitr} package to make it
 \textbf{easy to create reproducible web-based reports}.
 
-First, in \texttt{Rstudio} create a new \texttt{R\ Notebook} file. A
+First, in \texttt{Rstudio} create a new \texttt{R\ Markdown} file. A
 default template will be opened. There is some \texttt{R} code in
-\texttt{R\ chunks}, run them then click on \texttt{Preview} and save
-your file. Then your html report will be opened in the viewer pane.
-Every time you click on \texttt{Preview} the html file in the viewer
-pane will be updated. If your file is named \texttt{report.Rmd}, your
-report is named \texttt{report.nb.html}.
+\texttt{R\ chunks}. Clink on \texttt{knit}, save your file and see the
+produced output. The output is a html report containing the results of
+the \texttt{R} codes. If your file is named \texttt{report.Rmd}, your
+report is named \texttt{report.html}.
 
 \begin{rmdcaution}
 \begin{itemize}
 \tightlist
 \item
-  If there is no \texttt{R\ Notebook} button, this means you don't have
-  the last version of \texttt{Rstudio}.
-\item
-  In this case, click on \texttt{R\ Markdown} buttonn make sure that you
-  select HTML as output. This produces a \texttt{html\_document} and you
-  need to click on \texttt{knit} button to compile it.
+  Make sure to have the latest version of \texttt{Rstudio}.
 \item
   If you have problems creating a \texttt{R\ Markdown}~file (problem in
   installing packages, etc..) close your \texttt{Rstudio} and reopen it
   with administrative tools and retry.
 \item
-  If it doesn't work and in order to not loose more time, write your
+  If it doesn't work and in order to not lose more time, write your
   script in an \texttt{.R}~file with your comments and submit it.
 \end{itemize}
 \end{rmdcaution}
@@ -2329,13 +2323,13 @@ report is named \texttt{report.nb.html}.
 \begin{rmdcaution}
 \begin{itemize}
 \item
-  Be ready to submit your report (your \texttt{.nb.html} file) at the
-  end of each class.
+  Be ready to submit your report (your \texttt{.html} file) at the end
+  of each class.
 \item
   You report must be named:
 \end{itemize}
 
-\texttt{YouLastName\_YourFirstName\_WeekNumber.nb.html}
+\texttt{YouLastName\_YourFirstName\_WeekNumber.html}
 \end{rmdcaution}
 
 You can find all the informations about R Markdown on this site:
@@ -2357,13 +2351,14 @@ You may also find the following resources helpful:
 submitted}\label{the-report-to-be-submitted}
 \addcontentsline{toc}{subsection}{The report to be submitted}
 
-In \texttt{Rstudio}, start by creating a R Notebook. When you create it
-a default template will be opened with the following first lines:
+In \texttt{Rstudio}, start by creating a R Markdown file. When you
+create it a default template will be opened with the following first
+lines:
 
 \begin{verbatim}
 ---
-title: "R Notebook"
-output: html_notebook
+title: "Untitled"
+output: html_document
 ---
 \end{verbatim}
 
@@ -2377,9 +2372,9 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-16 09:51:20"
+date: "2017-01-16 10:43:12"
 output:
-  html_notebook:
+  html_document:
     toc: true
     toc_depth: 2
     theme: flatly
@@ -2398,11 +2393,11 @@ In the core of your report:
 \item
   Write the code of the exercise in R chunks.
 \item
-  Run the chunk, you get the result down the chunk, don't close it.
-\item
-  Click on Preview.
+  Run the chunk to make sure it works.
 \item
   If there is a need, explain the results.
+\item
+  Click on \texttt{knit}
 \end{itemize}
 
 \section{Multiple Linear Regression}\label{multiple-linear-regression-1}
