--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -2372,7 +2372,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-16 10:43:12"
+date: "2017-01-16 11:33:37"
 output:
   html_document:
     toc: true
@@ -2419,7 +2419,8 @@ median value of houses for 506 neighborhoods around Boston.
 \item
   Load the Boston dataset from \texttt{MASS} package.
 \item
-  Split the dataset into traning set and testing set.
+  Split the dataset into traning set and testing set. (keep all the
+  variables of the Boston data set)
 \item
   Check if there is a linear relationship between the variables
   \texttt{mdev} and \texttt{age}. (use \texttt{cor()} function).
