--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -2372,7 +2372,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-16 11:33:37"
+date: "2017-01-16 12:58:57"
 output:
   html_document:
     toc: true
@@ -2462,6 +2462,8 @@ median value of houses for 506 neighborhoods around Boston.
 \item
   Run the model again without \texttt{rad}. What happens to the \(R^2\)
   ? and for the F-statistic?
+\item
+  Calculate the mean squared error (MSE) for the last model.
 \end{enumerate}
 
 \begin{rmdinsight}
